tests/decoding/snapshots/decoding__png_suite__cdsn2c08.snap
---
source: tests/decoding/main.rs
expression: png
---
PNG {
    header: IHDRChunk {
        width: 8,
        height: 8,
        bit_depth: 8,
        color_type: Truecolor,
        compression_method: 0,
        filter_method: 0,
        interlace_method: 0,
    },
    pixels: [
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 4369,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 21845,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 26214,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 17476,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 4369,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 56797,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 48059,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 39321,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 39321,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 56797,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 34952,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 21845,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 48059,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 21845,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 48059,
            blue: 48059,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 56797,
            blue: 43690,
            alpha: 65535,
        },
        Pixel {
            red: 13107,
            green: 65535,
            blue: 4369,
            alpha: 65535,
        },
        Pixel {
            red: 61166,
            green: 48059,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 8738,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 34952,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 48059,
            blue: 48059,
            alpha: 65535,
        },
        Pixel {
            red: 48059,
            green: 0,
            blue: 48059,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 8738,
            blue: 56797,
            alpha: 65535,
        },
        Pixel {
            red: 8738,
            green: 61166,
            blue: 21845,
            alpha: 65535,
        },
        Pixel {
            red: 52428,
            green: 48059,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 17476,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 34952,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 48059,
            blue: 48059,
            alpha: 65535,
        },
        Pixel {
            red: 39321,
            green: 4369,
            blue: 52428,
            alpha: 65535,
        },
        Pixel {
            red: 21845,
            green: 13107,
            blue: 61166,
            alpha: 65535,
        },
        Pixel {
            red: 8738,
            green: 65535,
            blue: 21845,
            alpha: 65535,
        },
        Pixel {
            red: 52428,
            green: 48059,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 17476,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 21845,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 48059,
            green: 61166,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 17476,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 56797,
            blue: 39321,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 61166,
            blue: 34952,
            alpha: 65535,
        },
        Pixel {
            red: 13107,
            green: 65535,
            blue: 4369,
            alpha: 65535,
        },
        Pixel {
            red: 61166,
            green: 48059,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 8738,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 4369,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 52428,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 52428,
            green: 56797,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 39321,
            green: 56797,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 43690,
            green: 56797,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 61166,
            green: 56797,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 4369,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 21845,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 26214,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 26214,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 13107,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
    ],
}
