tests/decoding/snapshots/decoding__png_suite__s01i3p01.snap
---
source: tests/decoding/main.rs
expression: png
---
PNG {
    header: IHDRChunk {
        width: 1,
        height: 1,
        bit_depth: 1,
        color_type: IndexedColor,
        compression_method: 0,
        filter_method: 0,
        interlace_method: 1,
    },
    pixels: [
        Pixel {
            red: 0,
            green: 0,
            blue: 255,
            alpha: 65535,
        },
    ],
}
