tests/decoding/snapshots/decoding__png_suite__s04i3p01.snap
---
source: tests/decoding/main.rs
expression: "PNG::decode(&input).unwrap()"
---
PNG {
    header: IHDRChunk {
        width: 4,
        height: 4,
        bit_depth: 1,
        color_type: IndexedColor,
        compression_method: 0,
        filter_method: 0,
        interlace_method: 1,
    },
    pixels: [
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 119,
            blue: 255,
            alpha: 65535,
        },
    ],
}
