tests/decoding/snapshots/decoding__png_suite__s05i3p02.snap
---
source: tests/decoding/main.rs
expression: "PNG::decode(&input).unwrap()"
---
PNG {
    header: IHDRChunk {
        width: 5,
        height: 5,
        bit_depth: 2,
        color_type: IndexedColor,
        compression_method: 0,
        filter_method: 0,
        interlace_method: Adam7,
    },
    pixels: [
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 255,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 255,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 119,
            blue: 0,
            alpha: 65535,
        },
    ],
}
