tests/decoding/snapshots/decoding__png_suite__s06i3p02.snap
---
source: tests/decoding/main.rs
expression: "PNG::decode(&input).unwrap()"
---
PNG {
    header: IHDRChunk {
        width: 6,
        height: 6,
        bit_depth: 2,
        color_type: IndexedColor,
        compression_method: 0,
        filter_method: 0,
        interlace_method: Adam7,
    },
    pixels: [
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 255,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 255,
            green: 0,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 0,
            blue: 119,
            alpha: 65535,
        },
    ],
}
